<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  android:padding="16dp"
  >
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_page_email_title"
    android:layout_marginBottom="5dp"
    />
  <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_page_email_hint"
    android:inputType="textEmailAddress"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />
  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/login_page_password_hint"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />
  <Button
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_page_login"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />
  <Button
    android:id="@+id/otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_page_otp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />
</LinearLayout>


