<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  android:padding="16dp"
  >

  <TextView
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:hint="@string/verify_page_email_hint"
    />
  <EditText
    android:id="@+id/otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:hint="@string/verify_page_otp_hint"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />

  <Button
    android:id="@+id/verify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/verify_page_verify"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />

  <Button
    android:id="@+id/resend_otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/verify_page_resend_otp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    />

</LinearLayout>
